fixed an issue with waves not being clipped to view width

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .font-shadow {
+    text-shadow: 0px 0px 4px var(--background-color);
+  }
+  .font-shadow-none {
+    text-shadow: none;
+  }
+}
+
 :root {
   --xs: 575px; /* Max container width None (auto) */
   --sm: 576px; /* Max container width 540px */
@@ -154,7 +163,7 @@
 @layer components {
   /* button components */
   .btn {
-    @apply px-6 py-1 rounded w-fit min-h-[40px] transition-all text-gray-100 text-lg m-5;
+    @apply m-5 min-h-[40px] w-fit rounded px-6 py-1 text-lg text-gray-100 transition-all;
   }
 
   /* primary */
